# oneVPL-intel-gpu

./: .gitattributes  .gitignore  Android.bp  Android.mk  CMakeLists.txt  CODEOWNERS  CODEOWNERS.yaml  GitExtensions.settings  Intel.Dispatcher.Common.props  Intel.Dispatcher.DllExe.props  OpenSourceCMakeLists.txt  README.md  createLinuxPackage.bat  createMSDKInstalled.bat  exclusions.txt  mfxconfig.h.in  readme-setup.txt  sources_ext.cmake  sources_uwp.cmake
_studio/camera_pipe/: CMakeLists.txt  Intel.Mfx.Common.props  Intel.Mfx.StaticLib.props  camera_pipe.props  camera_pipe.rc  camera_pipe_plugin.sln  camera_pipe_plugin.vcxproj  camera_pipe_plugin.vcxproj.filters  camerapipe_genx_skl.cpp  libmfxhw_camera.props  libmfxhw_camera.vcxproj  mfxplugin_camera_pipe.props  mfxplugin_camera_pipe.vcxproj  resource.h
_studio/hevc_fei/: CMakeLists.txt  OpenSourceCMakeLists.txt  hevc_fei_plugin.sln  make_plugin_cfg.bat  mfxplugin_hevc_fei.vcxproj  mfxplugin_hevc_fei.vcxproj.filters  sources_ext.cmake
_studio/hevce_hw/: Android.mk  CMakeLists.txt  Intel.Mfx.Common.props  Intel.Mfx.StaticLib.props  OpenSourceCMakeLists.txt  hevce_hw_plugin.sln  mfxplugin_hevce_hw.vcxproj  mfxplugin_hevce_hw.vcxproj.filters  sources_ext.cmake
_studio/mfx_lib/: Android.mk  CMakeLists.txt  Intel.Mfx.Common.props  Intel.Mfx.DllExe.props  Intel.Mfx.Shared.props  Intel.Mfx.StaticLib.props  Intel.Mfx.Trace.Itt.props  Intel.Mfx.icc_ccover.props  OpenSourceCMakeLists.txt  SConscript  SConscriptTarget  SConscriptTarget_mfx_lib  SConscriptTarget_mfx_lib_impl  libmfx-gen.rc  libmfx.def  libmfx.map  libmfxaudio.def  libmfxaudio.map  libmfxaudio.rc  libmfxaudio.sln  libmfxaudio.vcxproj  libmfxhw.map  libmfxhw.props  libmfxhw.rc  libmfxhw.sln  libmfxhw.vcproj  libmfxhw.vcxproj  libmfxhw.vcxproj.filters  libmfxhw_d3d11.sln  libmfxhw_d3d11.vcproj  libmfxhw_d3d11.vcxproj  libmfxhw_d3d11.vcxproj.filters  libmfxhw_vs10.sln  libmfxrt.rc  libmfxrt.sln  libmfxrt.vcxproj  libmfxsw.map  libmfxsw.props  libmfxsw.rc  libmfxsw.sln  (+13 more)
_studio/ptir/: CMakeLists.txt  ptir_plugin.sln  ptir_plugin.vcxproj  ptir_plugin.vcxproj.filters  ptir_plugin_dev.sln
_studio/scd/: CMakeLists.txt  enc_scd.vcxproj  enc_scd.vcxproj.filters  make_plugin_cfg.bat  scd.sln  vpp_scd.vcxproj  vpp_scd.vcxproj.filters
_studio/vp8e/: CMakeLists.txt
_studio/vp9e_hw/: CMakeLists.txt
_testsuite/dxva2_dump/: CMakeLists.txt  SConscriptTarget  dxva2_dump.sln  dxva2_dump.vcproj  dxva2_dump.vcxproj  dxva2_dump.vcxproj.filters  dxva2_dump_lib.props  dxva2_dump_lib.vcproj  dxva2_dump_lib.vcxproj  dxva2_dump_vs10.sln  rtest_spy.bat  sample_decode_spy.bat
_testsuite/mfx_pavp/: CMakeLists.txt  mfx_pavp.cpp  mfx_pavp.def  mfx_pavp.h  mfx_pavp.sln  mfx_pavp.vcxproj
_testsuite/mfx_player/: Android.mk  CMakeLists.txt  Intel.Mfx.Default.props  Intel.Mfx.Header.props  SConscript  SConscriptTarget  SConscriptTarget_mfx_pipeline  mfx_pipeline.props  mfx_pipeline.vcproj  mfx_pipeline.vcxproj  mfx_pipeline.vcxproj.filters  mfx_player.props  mfx_player.sln  mfx_player.vcproj  mfx_player.vcxproj  mfx_player.vcxproj.filters  mfx_player_verify.pl
_testsuite/mfx_serializer/: Android.mk  CMakeLists.txt  mfx_serializer.sln  mfx_serializer.vcxproj  mfx_serializer.vcxproj.filters  serial_sample.vcxproj
_testsuite/mfx_transcoder/: Android.mk  CMakeLists.txt  Intel.Mfx.Default.props  Intel.Mfx.Header.props  SConscript  SConscriptTarget  SConscriptTarget_mfx_trans_pipeline  mfx_apps.sln  mfx_apps_vc10.sln  mfx_apps_vs10.sln  mfx_transcoder.props  mfx_transcoder.sln  mfx_transcoder.vcproj  mfx_transcoder.vcxproj  mfx_transcoder.vcxproj.filters  mfx_transcoder_lib.props  mfx_transcoder_lib.vcproj  mfx_transcoder_lib.vcxproj  mfx_transcoder_lib.vcxproj.filters  mfx_transcoder_verify.pl  mfx_transcoder_vs10.sln
_testsuite/msdk_ts/: CMakeLists.txt  MsdkTsDll.props  SConscript  SConscriptTarget  avce_skipframes.cpp  debug.par  enc_sample.par  msdk_gmock.sln  msdk_gmock.vcxproj  msdk_gmock.vcxproj.filters  msdk_ts.sln  msdk_ts.vcxproj  msdk_ts.vcxproj.filters  msdk_ts_dll.sln  msdk_ts_dll.vcxproj  msdk_ts_dll.vcxproj.filters  msdk_ts_dll_vs10.sln  msdk_ts_vs10.sln  readme.txt
_testsuite/shared/: Android.mk  CMakeLists.txt  SConscript  SConscriptTarget  readme.txt  shared_utils.props  shared_utils.vcproj  shared_utils.vcxproj  shared_utils_vs2012.vcxproj
_testsuite/test_comp/: CMakeLists.txt
_testsuite/test_prereq/: CMakeLists.txt  InstallerPreReq.cpp  InstallerPreReq.sln  InstallerPreReq.vcxproj  InstallerPreReq.vcxproj.filters
_testsuite/test_thread_safety/: Android.mk  CMakeLists.txt  Intel.Mfx.Header.props  SConscriptTarget  test_thread_safety.props  test_thread_safety.sln  test_thread_safety.vcproj  test_thread_safety.vcxproj  test_thread_safety.vcxproj.filters  test_thread_safety_vs10.sln
_testsuite/test_usage_models/: CMakeLists.txt  readme.txt  test_usage_models.sln  test_usage_models.vcproj  test_usage_models.vcxproj  (+2 more)
builder/: AllCMakeLists.txt  BuildOptions.cmake  CMakeLists.txt  ConfTargets.cmake  FindFFmpeg.cmake  FindFunctions.cmake  FindFunctions.cmake.ext  FindGTest.cmake  FindGlobals.cmake  FindIPP.cmake  FindIPPTS.cmake  FindITT.cmake  FindInternals.cmake  FindMDF.cmake  FindMFX.cmake  FindOpenCL.cmake  FindOpenCV.cmake  FindPackages.cmake  FindTrace.cmake  FindVTune.cmake  Intel.Mfx.BasicCompiler.props  Intel.Mfx.Building.props  Intel.Mfx.Default.props  Intel.Mfx.Footer.props  Intel.Mfx.Header.props  MSDK.Common.props  build_mfx.pl  mfxconfig.h.in  open_source_files.txt  open_source_symbols.list  open_source_symbols_define.list  open_source_symbols_undefine.list  targets.yaml
mediasdk_tracer_v2/: Android.mk  CMakeLists.txt  README  build.sh  config.ini  libmfx.map  mediasdk_tracer.gyp  mfx-tracer-config.vcxproj  mfx-tracer.def  mfx-tracer.vcxproj  mfx-tracer_vs12.sln
pavp/: CMakeLists.txt  Intel PAVP SDK EULA.rtf  license.txt  pavp.sln
samples/: AllSamples.sln  AllSamples_2010.sln  AllSamples_2015.sln  CMakeLists.txt  SamplesUWP.sln  build.pl  download.htm  readme-setup.txt  samples.sln  samples_ext.cmake  set_INTELMEDIASDK_WINSDK_PATH.bat
(+8704 files in other folders)
